# algorithm-master

./: README.md
src/com/HuaweiOD/test01/: test.py
src/com/HuaweiOD/任务执行总时长/: CMakeLists.txt  Question.md  test_time.py  time.cpp
src/com/HuaweiOD/匿名信/: CMakeLists.txt  Question.md  anonymousLetter.cpp  test.py
src/com/HuaweiOD/单词倒序/: CMakeLists.txt  reverse.cpp  test.py
src/com/HuaweiOD/字符串排序/: CMakeLists.txt  rearrange.cpp  rearrange.py
src/com/HuaweiOD/学校选址/: CMakeLists.txt  getlocate.py  getlocation.cpp
src/com/HuaweiOD/寻找密码/: CMakeLists.txt  findkey.cpp  findkey.py
src/com/HuaweiOD/找最多数量/: CMakeLists.txt  findmax.cpp  findmax.py
src/com/HuaweiOD/计算中心值/: CMakeLists.txt  midnums.cpp  midnums.py
src/com/HuaweiOD/重复单词/: CMakeLists.txt  build.sh  duplicate.cpp  duplicate.py
src/com/codewars/java/kazaky/week01/FindOutlier/: FindOutlier.java  FindOutlier.md  FindOutlierTest.java
src/com/codewars/java/kazaky/week01/Kata/: Kata.java  Kata.md  KataTest.java
src/com/codewars/java/kazaky/week01/NumberFun/: FindNextSquareTest.java  NumberFun.java  findNextSquare.md
src/com/codewars/java/kazaky/week01/nbYear/: Arge.java  Arge.md  ArgeTest.java
src/com/codewars/java/kazaky/week01/solution/: Solution.java  solution.md  solutionTest.java
src/com/codewars/java/kazaky/week02/XO/: SolutionTest.java  XO.java  XO.md
src/com/codewars/java/kazaky/week02/isogram/: isogram.java  isogram.md  isogramTest.java
src/com/codewars/java/kazaky/week02/solution/: solution.java  solution.md  solutionTest.java
src/com/codewars/java/kazaky/week02/validParentheses/: Solution.java  SolutionTest.java  validParentheses.md
src/com/codewars/java/kazaky/week03/BouncingBall/: BouncingBall.java  BouncingBall.md  BouncingBallTest.java
src/com/codewars/java/kazaky/week03/FindOdd/: FindOdd.java  FindOdd.md  FindOddTest.java
src/com/codewars/java/kazaky/week03/Kata/: Kata.java  Kata.md  KataTest.java
src/com/codewars/java/kazaky/week05/TwoSum/: Two Sum.py
src/com/codewars/java/kazaky/week4/DuplicateEncoder/: DuplicateEncoder.java  DuplicateEncoder.md  DuplicateEncoderTest.java
src/com/codewars/java/kazaky/week4/zero/: zeros.java  zeros.md  zerosTest.java
src/com/codewars/java/ling/week01/Accumul/: Accumul.java  AccumulTest.java  Mumbling.md
src/com/codewars/java/ling/week01/DuplicateEncoder/: Duplicate Encoder.md  DuplicateEncoder.java  DuplicateEncoderTest.java
src/com/codewars/java/ling/week01/FindOdd/: Find the odd int.md  FindOdd.java  FindOddTest.java
src/com/codewars/java/ling/week01/FindOutlier/: Find The Parity Outlier.md  FindOutlier.java  FindOutlierTest.java
src/com/codewars/java/ling/week01/Kata/: Array.diff.md  Kata.java  SolutionTest.java
src/com/codewars/java/ling/week01/Prime/: Is a number prime.md  Prime.java  PrimeTest.java
src/com/codewars/java/ling/week01/SmileFaces/: Count the smiley faces!.md  SmileFaces.java  SmileFacesTest.java
src/com/codewars/java/ling/week01/Solution/: Regex validate PIN code.md  Solution.java  (+1 more)
src/com/codewars/java/ling/week04/: Sudoku Solution Validator.md  SudokuValidator.java  SudokuValidatorTest.java
src/com/leetcode/C++/min_stack/: min_stack.cpp
src/com/leetcode/C++/杨辉三角/: 杨辉三角.md
src/com/leetcode/java/kazaky/Merge/: Solution.java
src/com/leetcode/java/kazaky/addTwoNumbers/: addTwoNumbers.cpp  addTwoNumbers.java
src/com/leetcode/java/kazaky/generate/: Solution.java
src/com/leetcode/java/kazaky/intersect/: Solution.java
src/com/leetcode/java/kazaky/maxProfit/: Solution.java
src/com/leetcode/java/kazaky/maxSubArray/: Solution.java
src/com/leetcode/java/kazaky/twoSum/: Solution.java
(+76 files in other folders)
